added exception handling

--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -35,7 +35,16 @@
     "For navigating pushshift: https://github.com/Watchful1/Sketchpad/blob/master/postDownloader.py\n",
     "\n",
     "# traffic = reddit.subreddit(subreddit).traffic() is not available to us, sadly.\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "with open(\"API.env\") as file:\n",
+    "    exec(file.read())\n",
+    "\n",
+    "reddit = praw.Reddit(\n",
+    "  client_id = client_id,\n",
+    "  client_secret = client_secret,\n",
+    "  user_agent = user_agent\n",
+    ")"
    ]
   },
   {
@@ -51,16 +60,7 @@
      ]
     }
    ],
-   "source": [
-    "with open(\"API.env\") as file:\n",
-    "    exec(file.read())\n",
-    "\n",
-    "reddit = praw.Reddit(\n",
-    "  client_id = client_id,\n",
-    "  client_secret = client_secret,\n",
-    "  user_agent = user_agent\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -192,7 +192,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time is currently 1620330846\n",
       "Target time: 1609459200, current end point 1620345600, remaining 10886400\n",
       "Target time: 1609459200, current end point 1620341606, remaining 10882406\n",
       "Target time: 1609459200, current end point 1620338080, remaining 10878880\n",
@@ -224,7 +223,66 @@
       "Target time: 1609459200, current end point 1620250938, remaining 10791738\n",
       "Target time: 1609459200, current end point 1620248258, remaining 10789058\n",
       "Target time: 1609459200, current end point 1620245608, remaining 10786408\n",
-      "Target time: 1609459200, current end point 1620242100, remaining 10782900\n"
+      "Target time: 1609459200, current end point 1620242100, remaining 10782900\n",
+      "Target time: 1609459200, current end point 1620239092, remaining 10779892\n",
+      "Target time: 1609459200, current end point 1620236083, remaining 10776883\n",
+      "Target time: 1609459200, current end point 1620232901, remaining 10773701\n",
+      "Target time: 1609459200, current end point 1620230200, remaining 10771000\n",
+      "Target time: 1609459200, current end point 1620227637, remaining 10768437\n",
+      "Target time: 1609459200, current end point 1620225117, remaining 10765917\n",
+      "Target time: 1609459200, current end point 1620222928, remaining 10763728\n",
+      "Target time: 1609459200, current end point 1620219456, remaining 10760256\n",
+      "Target time: 1609459200, current end point 1620214032, remaining 10754832\n",
+      "Target time: 1609459200, current end point 1620206286, remaining 10747086\n",
+      "Target time: 1609459200, current end point 1620195235, remaining 10736035\n",
+      "Target time: 1609459200, current end point 1620188190, remaining 10728990\n",
+      "Target time: 1609459200, current end point 1620182055, remaining 10722855\n",
+      "Target time: 1609459200, current end point 1620177152, remaining 10717952\n",
+      "Target time: 1609459200, current end point 1620170866, remaining 10711666\n",
+      "Target time: 1609459200, current end point 1620165151, remaining 10705951\n",
+      "Target time: 1609459200, current end point 1620160706, remaining 10701506\n",
+      "Target time: 1609459200, current end point 1620156549, remaining 10697349\n",
+      "Target time: 1609459200, current end point 1620150539, remaining 10691339\n",
+      "Target time: 1609459200, current end point 1620146962, remaining 10687762\n",
+      "Target time: 1609459200, current end point 1620143885, remaining 10684685\n",
+      "Target time: 1609459200, current end point 1620140146, remaining 10680946\n",
+      "Target time: 1609459200, current end point 1620137870, remaining 10678670\n",
+      "Target time: 1609459200, current end point 1620135872, remaining 10676672\n",
+      "Target time: 1609459200, current end point 1620131312, remaining 10672112\n",
+      "Target time: 1609459200, current end point 1620126347, remaining 10667147\n",
+      "Target time: 1609459200, current end point 1620117469, remaining 10658269\n",
+      "Target time: 1609459200, current end point 1620103483, remaining 10644283\n",
+      "Target time: 1609459200, current end point 1620095511, remaining 10636311\n",
+      "Target time: 1609459200, current end point 1620087737, remaining 10628537\n",
+      "Target time: 1609459200, current end point 1620083142, remaining 10623942\n",
+      "Target time: 1609459200, current end point 1620077941, remaining 10618741\n",
+      "Target time: 1609459200, current end point 1620074865, remaining 10615665\n",
+      "Target time: 1609459200, current end point 1620071455, remaining 10612255\n",
+      "Target time: 1609459200, current end point 1620067799, remaining 10608599\n",
+      "Target time: 1609459200, current end point 1620064400, remaining 10605200\n",
+      "Target time: 1609459200, current end point 1620060964, remaining 10601764\n",
+      "Target time: 1609459200, current end point 1620058468, remaining 10599268\n",
+      "Target time: 1609459200, current end point 1620055156, remaining 10595956\n",
+      "Target time: 1609459200, current end point 1620051929, remaining 10592729\n",
+      "Target time: 1609459200, current end point 1620049144, remaining 10589944\n",
+      "Target time: 1609459200, current end point 1620044395, remaining 10585195\n",
+      "Target time: 1609459200, current end point 1620035832, remaining 10576632\n",
+      "Target time: 1609459200, current end point 1620016962, remaining 10557762\n",
+      "Target time: 1609459200, current end point 1620007464, remaining 10548264\n",
+      "Target time: 1609459200, current end point 1620000621, remaining 10541421\n",
+      "Target time: 1609459200, current end point 1619992936, remaining 10533736\n",
+      "Target time: 1609459200, current end point 1619985533, remaining 10526333\n",
+      "Target time: 1609459200, current end point 1619978617, remaining 10519417\n",
+      "Target time: 1609459200, current end point 1619970304, remaining 10511104\n",
+      "Target time: 1609459200, current end point 1619957805, remaining 10498605\n",
+      "Target time: 1609459200, current end point 1619939913, remaining 10480713\n",
+      "Target time: 1609459200, current end point 1619925942, remaining 10466742\n",
+      "Target time: 1609459200, current end point 1619915751, remaining 10456551\n",
+      "Target time: 1609459200, current end point 1619907044, remaining 10447844\n",
+      "Target time: 1609459200, current end point 1619897414, remaining 10438214\n",
+      "Target time: 1609459200, current end point 1619887544, remaining 10428344\n",
+      "Target time: 1609459200, current end point 1619880268, remaining 10421068\n",
+      "Target time: 1609459200, current end point 1619869774, remaining 10410574\n"
      ]
     }
    ],
@@ -234,26 +292,33 @@
     "'''\n",
     "\n",
     "\n",
-    "def get_all_submissions(start_time, end_time):\n",
+    "def get_all_submissions(start_time, end_time, subreddit):\n",
     "    end = end_time\n",
     "    df = pd.DataFrame()\n",
     "    while end > start_time:\n",
     "        time.sleep(1) # Requests are rate limited\n",
     "        print(f\"Target time: {start_time}, current end point {end}, remaining {end - start_time}\")\n",
     "\n",
-    "        url = f\"https://api.pushshift.io/reddit/submission/search/?after={start_time}&before={end}&sort_type=created_utc&sort=desc&subreddit=wallstreetbets&limit=1000\"\n",
+    "        url = f\"https://api.pushshift.io/reddit/submission/search/?after={start_time}&before={end}&sort_type=created_utc&sort=desc&subreddit={subreddit}&limit=1000\"\n",
     "\n",
     "        data = requests.get(url)\n",
     "\n",
-    "        data_json = data.json()\n",
-    "        if len(data_json['data']) == 0:\n",
-    "            # break if there is no returned data\n",
-    "            break\n",
+    "        try:\n",
     "\n",
-    "        temp_df = pd.DataFrame(data_json['data'])\n",
-    "        end = min(temp_df.created_utc) \n",
-    "        df = df.append(temp_df, ignore_index = True)\n",
+    "            data_json = data.json()\n",
+    "            if len(data_json['data']) == 0:\n",
+    "                # break if there is no returned data\n",
+    "                break\n",
     "\n",
+    "            temp_df = pd.DataFrame(data_json['data'])\n",
+    "            end = min(temp_df.created_utc) \n",
+    "            df = df.append(temp_df, ignore_index = True)\n",
+    "        except:\n",
+    "            time.sleep(3)\n",
+    "            print(f\"Met an exception with {data.content}\")\n",
+    "            print(f\"Type of exception was {sys.exc_info()}\")\n",
+    "            # Mostly seeing json reading errors.\n",
+    "        \n",
     "    # Get the current score from praw\n",
     "    print(f\"Got {len(df)} submissions.\")\n",
     "    print(\"Getting the updated values.\")\n",
@@ -279,262 +344,41 @@
     "\n",
     "end = dt.datetime(2021, 5, 7) #dt.datetime.now()\n",
     "end_time = int(end.replace(tzinfo=dt.timezone.utc).timestamp())\n",
-    "print(f\"time is currently {now_timestamp}\")\n",
     "\n",
-    "df = get_all_submissions(start_time, end_time)\n",
-    "\n"
+    "df = get_all_submissions(start_time, end_time, \"wallstreetbets\")\n",
+    "\n",
+    "df.to_pickle(\"2021wsb.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>id</th>\n",
-       "      <th>created_utc</th>\n",
-       "      <th>author_fullname</th>\n",
-       "      <th>is_self</th>\n",
-       "      <th>score</th>\n",
-       "      <th>upvote_ratio</th>\n",
-       "      <th>total_awards_received</th>\n",
-       "      <th>selftext</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2493</th>\n",
-       "      <td>HOLDGME</td>\n",
-       "      <td>n5vldf</td>\n",
-       "      <td>1620263260</td>\n",
-       "      <td>t2_5syqfl4h</td>\n",
-       "      <td>False</td>\n",
-       "      <td>59820</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>199</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/jwhf5yp0hex61.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3323</th>\n",
-       "      <td>Monster Crash</td>\n",
-       "      <td>n5lboc</td>\n",
-       "      <td>1620235294</td>\n",
-       "      <td>t2_1jew76qz</td>\n",
-       "      <td>False</td>\n",
-       "      <td>53509</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>362</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/shekh7yq5cx61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3844</th>\n",
-       "      <td>VLAD</td>\n",
-       "      <td>n5g278</td>\n",
-       "      <td>1620221695</td>\n",
-       "      <td>t2_1jdyhbma</td>\n",
-       "      <td>False</td>\n",
-       "      <td>50248</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>176</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/yos8j48d1bx61.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7923</th>\n",
-       "      <td>WSB analyzes some charts</td>\n",
-       "      <td>n3dujk</td>\n",
-       "      <td>1619983656</td>\n",
-       "      <td>t2_9js0dd4x</td>\n",
-       "      <td>False</td>\n",
-       "      <td>46432</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>432</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/2qjyeacadrw61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1719</th>\n",
-       "      <td>The Insurrection of the Apes</td>\n",
-       "      <td>n63q7n</td>\n",
-       "      <td>1620294990</td>\n",
-       "      <td>t2_a2jxbzsv</td>\n",
-       "      <td>False</td>\n",
-       "      <td>40180</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>251</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/xl5x239t2hx61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>514</th>\n",
-       "      <td>When will the dip dip???</td>\n",
-       "      <td>n6f0w5</td>\n",
-       "      <td>1620328286</td>\n",
-       "      <td>t2_5ulprski</td>\n",
-       "      <td>False</td>\n",
-       "      <td>37401</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>111</td>\n",
-       "      <td></td>\n",
-       "      <td>https://i.redd.it/isenlnv9ujx61.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6565</th>\n",
-       "      <td>Heard it cost 200k in losses to join this grou...</td>\n",
-       "      <td>n44mxh</td>\n",
-       "      <td>1620069224</td>\n",
-       "      <td>t2_8clkgq79</td>\n",
-       "      <td>False</td>\n",
-       "      <td>31855</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>231</td>\n",
-       "      <td></td>\n",
-       "      <td>https://www.reddit.com/gallery/n44mxh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1071</th>\n",
-       "      <td>We’ve been compromised!</td>\n",
-       "      <td>n69ajb</td>\n",
-       "      <td>1620313307</td>\n",
-       "      <td>t2_11cvrlt5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>29831</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>164</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/5zfzinkrlix61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7425</th>\n",
-       "      <td>A Foolproof Investment</td>\n",
-       "      <td>n3rb5l</td>\n",
-       "      <td>1620031140</td>\n",
-       "      <td>t2_35lpjzqy</td>\n",
-       "      <td>False</td>\n",
-       "      <td>28824</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>106</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/oq5e5yvoavw61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8640</th>\n",
-       "      <td>It’s simple. As for me, I like the stock💎🤲🦍</td>\n",
-       "      <td>n2rw1m</td>\n",
-       "      <td>1619904334</td>\n",
-       "      <td>t2_yr5ck</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27182</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>334</td>\n",
-       "      <td></td>\n",
-       "      <td>https://v.redd.it/5bfm8ziltkw61</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  title      id  created_utc  \\\n",
-       "2493                                            HOLDGME  n5vldf   1620263260   \n",
-       "3323                                      Monster Crash  n5lboc   1620235294   \n",
-       "3844                                               VLAD  n5g278   1620221695   \n",
-       "7923                           WSB analyzes some charts  n3dujk   1619983656   \n",
-       "1719                       The Insurrection of the Apes  n63q7n   1620294990   \n",
-       "514                            When will the dip dip???  n6f0w5   1620328286   \n",
-       "6565  Heard it cost 200k in losses to join this grou...  n44mxh   1620069224   \n",
-       "1071                            We’ve been compromised!  n69ajb   1620313307   \n",
-       "7425                             A Foolproof Investment  n3rb5l   1620031140   \n",
-       "8640        It’s simple. As for me, I like the stock💎🤲🦍  n2rw1m   1619904334   \n",
-       "\n",
-       "     author_fullname  is_self  score  upvote_ratio  total_awards_received  \\\n",
-       "2493     t2_5syqfl4h    False  59820          0.86                    199   \n",
-       "3323     t2_1jew76qz    False  53509          0.89                    362   \n",
-       "3844     t2_1jdyhbma    False  50248          0.90                    176   \n",
-       "7923     t2_9js0dd4x    False  46432          0.85                    432   \n",
-       "1719     t2_a2jxbzsv    False  40180          0.89                    251   \n",
-       "514      t2_5ulprski    False  37401          0.94                    111   \n",
-       "6565     t2_8clkgq79    False  31855          0.90                    231   \n",
-       "1071     t2_11cvrlt5    False  29831          0.92                    164   \n",
-       "7425     t2_35lpjzqy    False  28824          0.94                    106   \n",
-       "8640        t2_yr5ck    False  27182          0.86                    334   \n",
-       "\n",
-       "     selftext                                    url  \n",
-       "2493             https://i.redd.it/jwhf5yp0hex61.jpg  \n",
-       "3323                 https://v.redd.it/shekh7yq5cx61  \n",
-       "3844             https://i.redd.it/yos8j48d1bx61.jpg  \n",
-       "7923                 https://v.redd.it/2qjyeacadrw61  \n",
-       "1719                 https://v.redd.it/xl5x239t2hx61  \n",
-       "514              https://i.redd.it/isenlnv9ujx61.jpg  \n",
-       "6565           https://www.reddit.com/gallery/n44mxh  \n",
-       "1071                 https://v.redd.it/5zfzinkrlix61  \n",
-       "7425                 https://v.redd.it/oq5e5yvoavw61  \n",
-       "8640                 https://v.redd.it/5bfm8ziltkw61  "
-      ]
-     },
-     "execution_count": 327,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wsb_cleaned = df[['title', 'id', 'created_utc', 'author_fullname', 'is_self', 'score', 'upvote_ratio', 'total_awards_received', 'selftext', 'url']]\n",
-    "wsb_cleaned.to_pickle(\"2021wsb.pkl\")\n",
     "wsb_cleaned.sort_values(by = \"score\", ascending = False).head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        1\n",
-       "1        1\n",
-       "2        1\n",
-       "3        3\n",
-       "4       36\n",
-       "        ..\n",
-       "1274     1\n",
-       "1275     8\n",
-       "1276     1\n",
-       "1277     1\n",
-       "1278     1\n",
-       "Name: score, Length: 1279, dtype: int64"
+       "(None, None, None)"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sys.exc_info()"
+   ]
   },
   {
    "cell_type": "code",
