cleaned up scraping code, improved how it handles request errors

--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -131,6 +131,8 @@
    "source": [
     "'''\n",
     "Sample num_samples random submissions, and get the top num_samples submissions, and put them into dataframes.\n",
+    "\n",
+    "Opted instead to scrape the entire thing.\n",
     "'''\n",
     "\n",
     "def random_sample(num_samples, subreddit):\n",
@@ -160,10 +162,16 @@
     "num_samples = 10\n",
     "subreddit ='wallstreetbets'\n",
     "\n",
-    "random_wsb = random_sample(num_samples, subreddit)\n",
-    "top_wsb = top_sample(num_samples,subreddit)\n",
-    "rising_wsb = rising_sample(num_samples, subreddit)\n",
-    "controversial_wsb = controversial_sample(num_samples, subreddit)\n",
+    "#random_wsb = random_sample(num_samples, subreddit)\n",
+    "#top_wsb = top_sample(num_samples,subreddit)\n",
+    "#rising_wsb = rising_sample(num_samples, subreddit)\n",
+    "#controversial_wsb = controversial_sample(num_samples, subreddit)\n",
+    "\n",
+    "#random_wsb.to_pickle(\"random_wsb.pkl\")\n",
+    "#top_wsb.to_pickle(\"top_wsb.pkl\")\n",
+    "#rising_wsb.to_pickle(\"rising_wsb.pkl\")\n",
+    "#controversial_wsb.to_pickle(\"controversial_wsb.pkl\")\n",
+    "\n",
     "# other commands here: https://praw.readthedocs.io/en/latest/code_overview/models/subreddit.html#praw.models.Subreddit.rising\n",
     "# NB: The subreddit stream option seems useful.\n",
     "# NB: There is also rising_random\n"
@@ -174,12 +182,7 @@
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "random_wsb.to_pickle(\"random_wsb.pkl\")\n",
-    "top_wsb.to_pickle(\"top_wsb.pkl\")\n",
-    "rising_wsb.to_pickle(\"rising_wsb.pkl\")\n",
-    "controversial_wsb.to_pickle(\"controversial_wsb.pkl\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -192,97 +195,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target time: 1609459200, current end point 1620345600, remaining 10886400\n",
-      "Target time: 1609459200, current end point 1620341606, remaining 10882406\n",
-      "Target time: 1609459200, current end point 1620338080, remaining 10878880\n",
-      "Target time: 1609459200, current end point 1620334037, remaining 10874837\n",
-      "Target time: 1609459200, current end point 1620331474, remaining 10872274\n",
-      "Target time: 1609459200, current end point 1620328796, remaining 10869596\n",
-      "Target time: 1609459200, current end point 1620326097, remaining 10866897\n",
-      "Target time: 1609459200, current end point 1620323077, remaining 10863877\n",
-      "Target time: 1609459200, current end point 1620321017, remaining 10861817\n",
-      "Target time: 1609459200, current end point 1620318313, remaining 10859113\n",
-      "Target time: 1609459200, current end point 1620315568, remaining 10856368\n",
-      "Target time: 1609459200, current end point 1620312887, remaining 10853687\n",
-      "Target time: 1609459200, current end point 1620310667, remaining 10851467\n",
-      "Target time: 1609459200, current end point 1620308873, remaining 10849673\n",
-      "Target time: 1609459200, current end point 1620306192, remaining 10846992\n",
-      "Target time: 1609459200, current end point 1620302895, remaining 10843695\n",
-      "Target time: 1609459200, current end point 1620300056, remaining 10840856\n",
-      "Target time: 1609459200, current end point 1620295948, remaining 10836748\n",
-      "Target time: 1609459200, current end point 1620291651, remaining 10832451\n",
-      "Target time: 1609459200, current end point 1620286422, remaining 10827222\n",
-      "Target time: 1609459200, current end point 1620281990, remaining 10822790\n",
-      "Target time: 1609459200, current end point 1620277294, remaining 10818094\n",
-      "Target time: 1609459200, current end point 1620274573, remaining 10815373\n",
-      "Target time: 1609459200, current end point 1620270918, remaining 10811718\n",
-      "Target time: 1609459200, current end point 1620267176, remaining 10807976\n",
-      "Target time: 1609459200, current end point 1620262982, remaining 10803782\n",
-      "Target time: 1609459200, current end point 1620258888, remaining 10799688\n",
-      "Target time: 1609459200, current end point 1620254742, remaining 10795542\n",
-      "Target time: 1609459200, current end point 1620250938, remaining 10791738\n",
-      "Target time: 1609459200, current end point 1620248258, remaining 10789058\n",
-      "Target time: 1609459200, current end point 1620245608, remaining 10786408\n",
-      "Target time: 1609459200, current end point 1620242100, remaining 10782900\n",
-      "Target time: 1609459200, current end point 1620239092, remaining 10779892\n",
-      "Target time: 1609459200, current end point 1620236083, remaining 10776883\n",
-      "Target time: 1609459200, current end point 1620232901, remaining 10773701\n",
-      "Target time: 1609459200, current end point 1620230200, remaining 10771000\n",
-      "Target time: 1609459200, current end point 1620227637, remaining 10768437\n",
-      "Target time: 1609459200, current end point 1620225117, remaining 10765917\n",
-      "Target time: 1609459200, current end point 1620222928, remaining 10763728\n",
-      "Target time: 1609459200, current end point 1620219456, remaining 10760256\n",
-      "Target time: 1609459200, current end point 1620214032, remaining 10754832\n",
-      "Target time: 1609459200, current end point 1620206286, remaining 10747086\n",
-      "Target time: 1609459200, current end point 1620195235, remaining 10736035\n",
-      "Target time: 1609459200, current end point 1620188190, remaining 10728990\n",
-      "Target time: 1609459200, current end point 1620182055, remaining 10722855\n",
-      "Target time: 1609459200, current end point 1620177152, remaining 10717952\n",
-      "Target time: 1609459200, current end point 1620170866, remaining 10711666\n",
-      "Target time: 1609459200, current end point 1620165151, remaining 10705951\n",
-      "Target time: 1609459200, current end point 1620160706, remaining 10701506\n",
-      "Target time: 1609459200, current end point 1620156549, remaining 10697349\n",
-      "Target time: 1609459200, current end point 1620150539, remaining 10691339\n",
-      "Target time: 1609459200, current end point 1620146962, remaining 10687762\n",
-      "Target time: 1609459200, current end point 1620143885, remaining 10684685\n",
-      "Target time: 1609459200, current end point 1620140146, remaining 10680946\n",
-      "Target time: 1609459200, current end point 1620137870, remaining 10678670\n",
-      "Target time: 1609459200, current end point 1620135872, remaining 10676672\n",
-      "Target time: 1609459200, current end point 1620131312, remaining 10672112\n",
-      "Target time: 1609459200, current end point 1620126347, remaining 10667147\n",
-      "Target time: 1609459200, current end point 1620117469, remaining 10658269\n",
-      "Target time: 1609459200, current end point 1620103483, remaining 10644283\n",
-      "Target time: 1609459200, current end point 1620095511, remaining 10636311\n",
-      "Target time: 1609459200, current end point 1620087737, remaining 10628537\n",
-      "Target time: 1609459200, current end point 1620083142, remaining 10623942\n",
-      "Target time: 1609459200, current end point 1620077941, remaining 10618741\n",
-      "Target time: 1609459200, current end point 1620074865, remaining 10615665\n",
-      "Target time: 1609459200, current end point 1620071455, remaining 10612255\n",
-      "Target time: 1609459200, current end point 1620067799, remaining 10608599\n",
-      "Target time: 1609459200, current end point 1620064400, remaining 10605200\n",
-      "Target time: 1609459200, current end point 1620060964, remaining 10601764\n",
-      "Target time: 1609459200, current end point 1620058468, remaining 10599268\n",
-      "Target time: 1609459200, current end point 1620055156, remaining 10595956\n",
-      "Target time: 1609459200, current end point 1620051929, remaining 10592729\n",
-      "Target time: 1609459200, current end point 1620049144, remaining 10589944\n",
-      "Target time: 1609459200, current end point 1620044395, remaining 10585195\n",
-      "Target time: 1609459200, current end point 1620035832, remaining 10576632\n",
-      "Target time: 1609459200, current end point 1620016962, remaining 10557762\n",
-      "Target time: 1609459200, current end point 1620007464, remaining 10548264\n",
-      "Target time: 1609459200, current end point 1620000621, remaining 10541421\n",
-      "Target time: 1609459200, current end point 1619992936, remaining 10533736\n",
-      "Target time: 1609459200, current end point 1619985533, remaining 10526333\n",
-      "Target time: 1609459200, current end point 1619978617, remaining 10519417\n",
-      "Target time: 1609459200, current end point 1619970304, remaining 10511104\n",
-      "Target time: 1609459200, current end point 1619957805, remaining 10498605\n",
-      "Target time: 1609459200, current end point 1619939913, remaining 10480713\n",
-      "Target time: 1609459200, current end point 1619925942, remaining 10466742\n",
-      "Target time: 1609459200, current end point 1619915751, remaining 10456551\n",
-      "Target time: 1609459200, current end point 1619907044, remaining 10447844\n",
-      "Target time: 1609459200, current end point 1619897414, remaining 10438214\n",
-      "Target time: 1609459200, current end point 1619887544, remaining 10428344\n",
-      "Target time: 1609459200, current end point 1619880268, remaining 10421068\n",
-      "Target time: 1609459200, current end point 1619869774, remaining 10410574\n"
+      "Processing 2021-01-01 00:00:00 to 2021-01-02 00:00:00\n",
+      "Target time: 1609459200, current end point 1609545600, remaining 86400\n",
+      "Target time: 1609459200, current end point 1609534069, remaining 74869\n",
+      "Target time: 1609459200, current end point 1609521526, remaining 62326\n",
+      "Target time: 1609459200, current end point 1609503860, remaining 44660\n",
+      "Target time: 1609459200, current end point 1609480549, remaining 21349\n",
+      "Target time: 1609459200, current end point 1609467221, remaining 8021\n",
+      "Target time: 1609459200, current end point 1609459326, remaining 126\n",
+      "Got 588 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-02 00:00:00 to 2021-01-03 00:00:00\n",
+      "Target time: 1609545600, current end point 1609632000, remaining 86400\n",
+      "Target time: 1609545600, current end point 1609619090, remaining 73490\n",
+      "Target time: 1609545600, current end point 1609611159, remaining 65559\n",
+      "Target time: 1609545600, current end point 1609602553, remaining 56953\n",
+      "Target time: 1609545600, current end point 1609583413, remaining 37813\n",
+      "Target time: 1609545600, current end point 1609561459, remaining 15859\n",
+      "Target time: 1609545600, current end point 1609548517, remaining 2917\n",
+      "Target time: 1609545600, current end point 1609545747, remaining 147\n",
+      "Got 625 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-03 00:00:00 to 2021-01-04 00:00:00\n",
+      "Target time: 1609632000, current end point 1609718400, remaining 86400\n",
+      "Target time: 1609632000, current end point 1609708536, remaining 76536\n",
+      "Target time: 1609632000, current end point 1609699579, remaining 67579\n",
+      "Target time: 1609632000, current end point 1609687423, remaining 55423\n",
+      "Target time: 1609632000, current end point 1609660527, remaining 28527\n",
+      "Target time: 1609632000, current end point 1609646117, remaining 14117\n",
+      "Target time: 1609632000, current end point 1609633073, remaining 1073\n",
+      "Target time: 1609632000, current end point 1609632015, remaining 15\n",
+      "Got 613 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-04 00:00:00 to 2021-01-05 00:00:00\n",
+      "Target time: 1609718400, current end point 1609804800, remaining 86400\n",
+      "Target time: 1609718400, current end point 1609797455, remaining 79055\n",
+      "Target time: 1609718400, current end point 1609793808, remaining 75408\n",
+      "Target time: 1609718400, current end point 1609788931, remaining 70531\n",
+      "Target time: 1609718400, current end point 1609783799, remaining 65399\n",
+      "Target time: 1609718400, current end point 1609778911, remaining 60511\n",
+      "Target time: 1609718400, current end point 1609774938, remaining 56538\n",
+      "Target time: 1609718400, current end point 1609770060, remaining 51660\n",
+      "Target time: 1609718400, current end point 1609755618, remaining 37218\n",
+      "Target time: 1609718400, current end point 1609735769, remaining 17369\n",
+      "Target time: 1609718400, current end point 1609723295, remaining 4895\n",
+      "Target time: 1609718400, current end point 1609718659, remaining 259\n",
+      "Got 1028 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-05 00:00:00 to 2021-01-06 00:00:00\n",
+      "Target time: 1609804800, current end point 1609891200, remaining 86400\n",
+      "Target time: 1609804800, current end point 1609883567, remaining 78767\n",
+      "Target time: 1609804800, current end point 1609877814, remaining 73014\n",
+      "Target time: 1609804800, current end point 1609873035, remaining 68235\n",
+      "Target time: 1609804800, current end point 1609867463, remaining 62663\n",
+      "Target time: 1609804800, current end point 1609861262, remaining 56462\n",
+      "Target time: 1609804800, current end point 1609854043, remaining 49243\n",
+      "Target time: 1609804800, current end point 1609833835, remaining 29035\n",
+      "Target time: 1609804800, current end point 1609819749, remaining 14949\n",
+      "Target time: 1609804800, current end point 1609809514, remaining 4714\n",
+      "Target time: 1609804800, current end point 1609804903, remaining 103\n",
+      "Got 962 submissions.\n",
+      "Getting the updated values.\n"
      ]
     }
    ],
@@ -291,6 +264,8 @@
     "Code for getting all submissions between certain date time\n",
     "'''\n",
     "\n",
+    "def convert_to_utc(date):\n",
+    "    return int(date.replace(tzinfo=dt.timezone.utc).timestamp())\n",
     "\n",
     "def get_all_submissions(start_time, end_time, subreddit):\n",
     "    end = end_time\n",
@@ -302,9 +277,9 @@
     "        url = f\"https://api.pushshift.io/reddit/submission/search/?after={start_time}&before={end}&sort_type=created_utc&sort=desc&subreddit={subreddit}&limit=1000\"\n",
     "\n",
     "        data = requests.get(url)\n",
-    "\n",
-    "        try:\n",
-    "\n",
+    "        \n",
+    "        \n",
+    "        if data.headers['Content-Type'] == 'application/json; charset=UTF-8':\n",
     "            data_json = data.json()\n",
     "            if len(data_json['data']) == 0:\n",
     "                # break if there is no returned data\n",
@@ -313,12 +288,9 @@
     "            temp_df = pd.DataFrame(data_json['data'])\n",
     "            end = min(temp_df.created_utc) \n",
     "            df = df.append(temp_df, ignore_index = True)\n",
-    "        except:\n",
-    "            time.sleep(3)\n",
-    "            print(f\"Met an exception with {data.content}\")\n",
-    "            print(f\"Type of exception was {sys.exc_info()}\")\n",
-    "            # Mostly seeing json reading errors.\n",
-    "        \n",
+    "        else:\n",
+    "            print(data.headers['Content-Type']) \n",
+    "            \n",
     "    # Get the current score from praw\n",
     "    print(f\"Got {len(df)} submissions.\")\n",
     "    print(\"Getting the updated values.\")\n",
@@ -338,16 +310,24 @@
     "        \n",
     "    return df\n",
     "\n",
+    "subreddit_df = pd.DataFrame()\n",
     "\n",
     "start = dt.datetime(2021, 1,1)\n",
-    "start_time = int(start.replace(tzinfo=dt.timezone.utc).timestamp())\n",
-    "\n",
     "end = dt.datetime(2021, 5, 7) #dt.datetime.now()\n",
-    "end_time = int(end.replace(tzinfo=dt.timezone.utc).timestamp())\n",
+    "delta = dt.timedelta(days=1)\n",
+    "window_left = start\n",
+    "window_right = start + delta\n",
     "\n",
-    "df = get_all_submissions(start_time, end_time, \"wallstreetbets\")\n",
+    "while window_right < end:\n",
+    "    # Decided to go day by day to avoid losing data due to crashing partway through\n",
+    "    print(f\"Processing {window_left} to {window_right}\")\n",
+    "    df = get_all_submissions(convert_to_utc(window_left), convert_to_utc(window_right), \"wallstreetbets\")\n",
+    "    df.to_pickle(f\"Data/wsb_start{convert_to_utc(window_left)}.pkl\")\n",
+    "    subreddit_df = subreddit_df.append(df, ignore_index = True)\n",
+    "    window_left += delta\n",
+    "    window_right += delta\n",
     "\n",
-    "df.to_pickle(\"2021wsb.pkl\")"
+    "subreddit_df.to_pickle(\"Data/2021wsb.pkl\")"
    ]
   },
   {
@@ -376,9 +356,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "sys.exc_info()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
