cleaned up scraping code, removed old stuff

--- a/Monitoring.ipynb
+++ b/Monitoring.ipynb
@@ -346,7 +346,9 @@
    "execution_count": 119,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df2 = pd.DataFrame(df.head(100), copy = True)"
+   ]
   },
   {
    "cell_type": "code",
